# injmatch

./: .gitignore  jest.config.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  vercel.json
.github/workflows/: score-matches.yml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/artifacts/: injmatch.wasm  injmatch_lowered.wasm  injmatch_mvp.wasm
contracts/src/: contract.rs  error.rs  msg.rs  state.rs
prisma/: schema.prisma
scripts/: deploy.mjs  lower-bulk-memory.py  patch-cosmjs.cjs  test-squad.mjs
src/: auth.ts
src/__tests__/: scoring-engine.test.ts
src/app/: layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/api/fixtures/: route.ts
src/app/api/transfer-window/: route.ts
src/app/faq/: page.tsx
src/app/fixtures/: page.tsx
src/app/leaderboard/: page.tsx
src/app/predictions/: page.tsx
src/app/scores/: page.tsx
src/app/squad/: page.tsx
src/components/: ClientShell.tsx  PrizeSplit.tsx
src/components/league/: CreateLeagueModal.tsx  LeagueCard.tsx
src/components/predictions/: Leaderboard.tsx  PredictionForm.tsx
src/components/profile/: ProfileModal.tsx  ProfilePanel.tsx
src/components/squad/: Pitch.tsx  PlayerAvatar.tsx  PlayerCard.tsx  PlayerPool.tsx  SquadShareCard.tsx
src/components/wallet/: WalletButton.tsx  WalletProvider.tsx
src/hooks/: useContract.ts  useNFTBoost.ts  useProfile.ts  useSquad.ts  useWallet.ts
src/lib/: injective.ts  network.ts  players.ts  prisma.ts  scoring-engine.ts  stats-adapter.ts  wc2026-fixtures.ts
src/types/: index.ts  scoring.ts  squad.ts
(+4 files in other folders)
